# titler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TitlerRelease  icon32.xpm
include/: Project.h  Titler.h  property.h  srtparser.h  titBlackPanel.h  titHandle.h  titMediaCtrl.h  titMenuBar.h  titSubtitle.h  titTextEntryDialog.h  titTimeline.h  utils.h
rc/: titler.rc
src/: Project.cpp  Titler.cpp  property.cpp  titBlackPanel.cpp  titHandle.cpp  titMediaCtrl.cpp  titMenuBar.cpp  titSubtitle.cpp  titTextEntryDialog.cpp  titTimeline.cpp
